gac_sb/objects/Mission__c.object
<CustomObject>
    <fields>
        <fullName>Nb_tapes_du_projet__c</fullName>
        <inlineHelpText>Indiquer ici si le dépôt du projet se fait en une ou deux étapes.</inlineHelpText>
        <label>Nb étapes du projet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NombreDiplomesTempsExclusif__c</fullName>
        <label>Pós-Graduados N° de Pessoas com Exclusiv</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreDiplomesTempsPartiel__c</fullName>
        <label>Graduados N° de Pessoas com Parcial</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreHeureRAD__c</fullName>
        <description>Nombre d&apos;heure R&amp;D</description>
        <label>Número de horas P&amp;D</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreLigneRecherche__c</fullName>
        <label>Número de linhas de pesquisa</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreMaitreExclusif__c</fullName>
        <label>Mestres N° de Pessoas com Exclusiva</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreMaitrePartiel__c</fullName>
        <label>Mestres N° de Pessoas com Parcial</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreMedecinExclusif__c</fullName>
        <label>Doutores N° de Pessoas com Exclusiva</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreMedecinPartielPersonnne__c</fullName>
        <label>Doutores N°  Parcial</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombrePersonneExclusif__c</fullName>
        <formula>NombreMedecinExclusif__c +  NombreMaitreExclusif__c  +  NombrePostDiplomesExclusif__c  + NombreDiplomesTempsExclusif__c +  NombreTechicienExclusif__c  + NombreTechnicoMedicalExclusif__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>N° de Pessoas com Dedicação Exclusiva</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombrePersonneFullTime__c</fullName>
        <description>Nombre de personne à plein temps</description>
        <label>Número de pesquisadores contratados</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombrePersonnePartiel__c</fullName>
        <description>Nombre de personnes partielles</description>
        <label>Número de pessoas parciais</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombrePersonneTechnique__c</fullName>
        <label>Tecnológos N° de Pessoas com Parcial</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombrePostDiplomesExclusif__c</fullName>
        <label>Graduados N° de Pessoas com Exclussiva</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombrePostDiplomesTempsPartiel__c</fullName>
        <label>Pós-Graduados N° de Pessoas com Parcial</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreProjet__c</fullName>
        <description>Nombre de projets</description>
        <label>Número de projetos</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreTechicienExclusif__c</fullName>
        <label>Tecnológos N° de Pessoas com Exclusiva</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreTechnicoMedicalExclusif__c</fullName>
        <label>Tecnológos de Nìvel Médico Exclusiva</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreTechnicoMedical__c</fullName>
        <label>Técnicos de Nível Médio N° Parcial</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreTotalPersonne__c</fullName>
        <formula>NombrePersonnePartiel__c  +  NombrePersonneFullTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número total de pessoas incentivadas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_d_heures_estime_fiscaliste__c</fullName>
        <label>Nombre d&apos;heures estimé fiscaliste</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_d_heures_estime_scientifique__c</fullName>
        <label>Nombre d’heures estimé scientifique</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_d_heures_reel_fiscaliste__c</fullName>
        <label>Nombre d&apos;heures réel fiscaliste</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_d_heures_reel_scientifique__c</fullName>
        <label>Nombre d&apos;heures réel scientifique</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_de_partenaires__c</fullName>
        <label>Nombre de partenaires</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_missions__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre missions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_horas_efectivas_coordenador__c</fullName>
        <description>Nombre d&apos;heures réelles de traitement de la mission saisies par un/des consultant(s).</description>
        <label>Número de horas efectivas coordenador</label>
        <summarizedField>Annual_time_sheet__c.Number_of_hours_really_done__c</summarizedField>
        <summaryFilterItems>
            <field>Annual_time_sheet__c.Consultant_type__c</field>
            <operation>equals</operation>
            <value>Coordenador</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Annual_time_sheet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Annual Time Sheet LDB, Annual Time Sheet CSL, Annual Time Sheet FND</value>
        </summaryFilterItems>
        <summaryForeignKey>Annual_time_sheet__c.Mission_concerned__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Numero_de_horas_efectivas_estagiario__c</fullName>
        <description>Nombre d&apos;heures réelles de traitement de la mission saisies par le stagiaire.</description>
        <label>Número de horas efectivas estagiário</label>
        <summarizedField>Annual_time_sheet__c.Number_of_hours_really_done__c</summarizedField>
        <summaryFilterItems>
            <field>Annual_time_sheet__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Annual Time Sheet LDB, Annual Time Sheet CSL, Annual Time Sheet FND</value>
        </summaryFilterItems>
        <summaryForeignKey>Annual_time_sheet__c.Mission_concerned__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Numero_de_horas_efectivas_total__c</fullName>
        <description>Somme des nombres d&apos;heures réelles de traitement de la mission.</description>
        <formula>N_mero_de_horas_efectivas_apoio_RH__c  + N_mero_de_horas_efectivas_apoio_cont_bil__c  +  N_mero_de_horas_efectivas_consultor__c  +  Numero_de_horas_efectivas_coordenador__c +  Numero_de_horas_efectivas_estagiario__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de horas efectivas total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_horas_estimadas_apoio_RH__c</fullName>
        <description>Nombre d&apos;heures estimées de traitement de la mission par le support RHau Brésil.</description>
        <label>Número de horas estimadas apoio RH</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_horas_estimadas_apoio_contabil__c</fullName>
        <description>Nombre d&apos;heures estimées de traitement de la mission par le support comptable au Brésil.</description>
        <label>Número de horas estimadas apoio contábil</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_horas_estimadas_consultor__c</fullName>
        <description>Nombre d&apos;heures estimées de traitement de la mission par le consultant au Brésil.</description>
        <label>Número de horas estimadas consultor</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_horas_estimadas_estagiario__c</fullName>
        <description>Nombre d&apos;heures estimées de traitement de la mission par le stagiaire au Brésil.</description>
        <label>Número de horas estimadas estagiário</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_horas_estimadas_manager__c</fullName>
        <description>Nombre d&apos;heures estimées de traitement de la mission par le manager au Brésil.</description>
        <label>Número de horas estimadas coordenador</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_horas_estimadas_total__c</fullName>
        <description>Somme des nombres d&apos;heures estimées de traitement de la mission.</description>
        <formula>Numero_de_horas_estimadas_apoio_contabil__c  +  Numero_de_horas_estimadas_apoio_RH__c  +  Numero_de_horas_estimadas_consultor__c  +  Numero_de_horas_estimadas_estagiario__c  +  Numero_de_horas_estimadas_manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de horas estimadas total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_pesquisadores_atribuidos__c</fullName>
        <inlineHelpText>Preencher o valor se você selecionou &quot;Inova Talentos&quot; no campo &quot;Tipo Financiamento&quot;.</inlineHelpText>
        <label>Número de pesquisadores atribuidos</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_pesquisadores_pedidos__c</fullName>
        <inlineHelpText>Preencher o valor se você selecionou &quot;Inova Talentos&quot; no campo &quot;Tipo Financiamento&quot;.</inlineHelpText>
        <label>Número de pesquisadores pedidos</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_projetos_analisados__c</fullName>
        <inlineHelpText>Preencher o valor se você selecionou &quot;Inova Talentos&quot; no campo &quot;Tipo Financiamento&quot;.</inlineHelpText>
        <label>Número de projetos analisados</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_du_client__c</fullName>
        <description>Reprend le numéro client sur le compte
champ canadien</description>
        <formula>TEXT(Compte__r.Numero_du_client__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numéro du client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options_support__c</fullName>
        <inlineHelpText>Typologie d&apos;offre AS.</inlineHelpText>
        <label>Options support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>++</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Palavra_chave_linha_de_pesquisa__c</fullName>
        <label>Palavra-chave linha de pesquisa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patente__c</fullName>
        <description>Patente</description>
        <label>Patentes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Perimetre__c</fullName>
        <description>Nombre de projets dans le périmètre de la mission</description>
        <inlineHelpText>Nombre de projets dans le périmètre de la mission</inlineHelpText>
        <label>Périmètre</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Periode_Fact_forfait__c</fullName>
        <description>Date de facturation du forfait ( modalité de facturation)</description>
        <label>Période Facturation forfait</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phase_Actuelle__c</fullName>
        <label>Fase Atual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nenhum</fullName>
                </value>
                <value>
                    <fullName>KOM</fullName>
                </value>
                <value>
                    <fullName>Preparação</fullName>
                </value>
                <value>
                    <fullName>Análise das oportunidades</fullName>
                </value>
                <value>
                    <fullName>Conclusão</fullName>
                </value>
                <value>
                    <fullName>Fiscalização</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pole__c</fullName>
        <formula>CASE(RecordType.DeveloperName, &apos;CIR&apos;,&apos;Inno&apos;,&apos;DI&apos;,&apos;Inno&apos;,&apos;FI&apos;,&apos;Inno&apos;,&apos;ACS&apos;,&apos;Perf RH&apos;,&apos;CRH&apos;,&apos;Perf RH&apos;,&apos;TAT&apos;,&apos;Perf RH&apos;,&apos;IL&apos;,&apos;Perf Financière&apos;,&apos;CFI&apos;,&apos;Perf Financière&apos;,&apos;VEILLE&apos;,&apos;Inno&apos;,&apos;CIN&apos;,&apos;Inno&apos;,&apos;#&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pôle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PourcentageCSLL__c</fullName>
        <description>Pourcentage CSLL</description>
        <label>% CSLL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PourcentageDeduction__c</fullName>
        <description>Pourcetage de déduction</description>
        <label>% dedução</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PourcentageIRPJ__c</fullName>
        <description>Pourcentage IRPJ</description>
        <label>% IRPJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pr_avis_r_siliation_mois__c</fullName>
        <label>Préavis de résiliation (mois)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pr_t_obtenu__c</fullName>
        <description>ESPAGNE</description>
        <label>Prêt obtenu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precision_facturation__c</fullName>
        <label>Précision facturation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precision_paiement__c</fullName>
        <label>Précision paiement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precision_remuneration__c</fullName>
        <label>Précision rémunération</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrevisionBenefice__c</fullName>
        <label>Previsão de Lucro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
                <value>
                    <fullName>Indefinido</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrevisionDossierRIT__c</fullName>
        <label>Data previsão finalização RIT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prevision_de_facturation_Commercial__c</fullName>
        <formula>Contrat__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prevision de facturation - Commercial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prevision_de_facturation_analyse__c</fullName>
        <label>Prevision de facturation - Analyse</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prevision_de_facturation_kickoff__c</fullName>
        <label>Prevision de facturation - Kick off</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prevision_de_facturation_preparation__c</fullName>
        <label>Prevision de facturation - Preparation</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prevision_investissement_analyse__c</fullName>
        <label>Prevision d&apos;investissement - Analyse</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prevision_investissement_commercial__c</fullName>
        <label>Prevision d&apos;investissement - Commercial</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prevision_investissement_kickoff__c</fullName>
        <label>Prevision d&apos;investissement - Kick off</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prevision_investissement_preparation__c</fullName>
        <label>Prevision d&apos;investissement - Preparation</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Procuration_date_d_but__c</fullName>
        <description>champ canadien</description>
        <label>Procuration (date début)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Procuration_date_envoyee__c</fullName>
        <description>champ canadien</description>
        <label>Procuration (date envoyée)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgrammeRechercheDeveloppement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programa de PD&amp;I</label>
        <referenceTo>ProgrammeRechercheDeveloppement__c</referenceTo>
        <relationshipLabel>Missions</relationshipLabel>
        <relationshipName>Programa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_D__c</fullName>
        <defaultValue>false</defaultValue>
        <label>R&amp;D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_mun_ration_future__c</fullName>
        <label>Rémunération future</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>6 mois</fullName>
                </value>
                <value>
                    <fullName>12 mois</fullName>
                </value>
                <value>
                    <fullName>18 mois</fullName>
                </value>
                <value>
                    <fullName>24 mois</fullName>
                </value>
                <value>
                    <fullName>36 mois</fullName>
                </value>
                <value>
                    <fullName>48 mois</fullName>
                </value>
                <value>
                    <fullName>60 mois</fullName>
                </value>
                <value>
                    <fullName>N+1</fullName>
                </value>
                <value>
                    <fullName>N+2</fullName>
                </value>
                <value>
                    <fullName>N+3</fullName>
                </value>
                <value>
                    <fullName>N+4</fullName>
                </value>
                <value>
                    <fullName>N+5</fullName>
                </value>
                <value>
                    <fullName>Toutes les années</fullName>
                </value>
                <value>
                    <fullName>3 année par CE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_sultat__c</fullName>
        <description>Champ Canadien</description>
        <label>Résultat</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Real_Margin__c</fullName>
        <formula>Total_real_Margin__c /  CA_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Real Margin %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Real_Margin_this_year__c</fullName>
        <formula>If(CA_2016__c &gt; 0,(Total_real_margin_this_year__c / CA_2016__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Real Margin % this year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RealisationDosssier__c</fullName>
        <description>Réalisation dossier</description>
        <label>Confecção RIT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendente</fullName>
                </value>
                <value>
                    <fullName>Em andamento</fullName>
                </value>
                <value>
                    <fullName>Finalizado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReceptionCopieFacture__c</fullName>
        <description>Réception copies des factures</description>
        <label>Recepção NFs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendente</fullName>
                </value>
                <value>
                    <fullName>Em andamento</fullName>
                </value>
                <value>
                    <fullName>Finalizado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReceptionDonneesRH__c</fullName>
        <description>Réceptions des données RH</description>
        <label>Recepção dados RH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendente</fullName>
                </value>
                <value>
                    <fullName>Em andamento</fullName>
                </value>
                <value>
                    <fullName>Finalizado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReceptionInfoTechnique__c</fullName>
        <label>Recepção evidências projetos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendente</fullName>
                </value>
                <value>
                    <fullName>Em andamento</fullName>
                </value>
                <value>
                    <fullName>Finalizado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReceptionSuiviTemps__c</fullName>
        <label>Recepção horas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendente</fullName>
                </value>
                <value>
                    <fullName>Em andemanto</fullName>
                </value>
                <value>
                    <fullName>Finalizado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RedressementFiscal__c</fullName>
        <description>Redressement fiscal</description>
        <label>Glosa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Não</fullName>
                </value>
                <value>
                    <fullName>Sim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reduction__c</fullName>
        <description>Réduction</description>
        <label>Redução a zero da alíquota do IR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RegistreCulture__c</fullName>
        <description>Registre de culture</description>
        <label>Registro de cultivar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_reason__c</fullName>
        <label>Rejection reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Items rejected (PIC)</fullName>
                </value>
                <value>
                    <fullName>Project rejected (No R&amp;D) after full assessment</fullName>
                </value>
                <value>
                    <fullName>Project rejected (No R&amp;D) after preliminary assessment</fullName>
                </value>
                <value>
                    <fullName>R&amp;D projects rejected after full assessment</fullName>
                </value>
                <value>
                    <fullName>R&amp;D projects rejected after preliminary assessment</fullName>
                </value>
                <value>
                    <fullName>Administrative eligibility issues</fullName>
                </value>
                <value>
                    <fullName>Technical eligibility issues</fullName>
                </value>
                <value>
                    <fullName>Client issues</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rentabilite__c</fullName>
        <formula>(1 - ( ABS(Cout_de_Prod_Total__c)  /  ABS(CA_Total__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rentabilité</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Responsabe_r_daction_technique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Canada</description>
        <label>Responsabe rédaction technique</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Division</field>
                <operation>equals</operation>
                <value>CANADA</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Missions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsable_1_re_entrevue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>canada</description>
        <label>Responsable 1ère entrevue</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Division</field>
                <operation>equals</operation>
                <value>CANADA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Missions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsable_V_rification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Canada</description>
        <label>Responsable Vérification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Division</field>
                <operation>equals</operation>
                <value>CANADA</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Missionsi5WW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsable_avis_de_cot_provincial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Canada</description>
        <label>Responsable avis de cot. provincial</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Division</field>
                <operation>equals</operation>
                <value>CANADA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Missions9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsable_avis_de_cotisation_f_d_rale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Canada</description>
        <label>Responsable avis de cotisation fédérale</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Division</field>
                <operation>equals</operation>
                <value>CANADA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Missions8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsable_de_la_production_finance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Canada</description>
        <label>Responsable de la production finance</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Division</field>
                <operation>equals</operation>
                <value>CANADA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Missions4</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>